<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Payday</string>
    <string name="app_tagline">수입은 한눈에, 정기지출은 미리 준비해요.</string>
    <string name="login_tagline">당신의 금융을 더 똑똑하게 관리하세요</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="email_hint">이메일 입력</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호 입력</string>
    <string name="password_rule">영문과 숫자를 포함해 8자 이상</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="password_confirm_hint">비밀번호 다시 입력</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">2~10자 입력</string>
    <string name="no_account">계정이 없으신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="join">가입하기</string>
    <string name="sign_up_complete">회원가입이 완료되었습니다. 로그인해 주세요.</string>
    <string name="current_month">‹  3월  ›</string>
    <string name="monthly_total">지출 합계</string>
    <string name="recurring_total">정기 결제 금액</string>
    <string name="expense_distribution">지출 분포</string>
    <string name="current_month_basis">이번 달 기준</string>
    <string name="chart_placeholder">0%</string>
    <string name="dashboard_empty">아직 등록된 거래가 없습니다.\n+ 버튼을 눌러 첫 지출을 등록해 보세요.</string>
    <string name="dashboard_tab">▦\nDashboard</string>
    <string name="lists_tab">☷\nLists</string>
    <string name="logout">로그아웃</string>
    <string name="won_amount">₩%1$s</string>
    <string name="expense_add_title">지출 추가</string>
    <string name="expense_edit_title">지출 수정</string>
    <string name="expense_type_fixed">고정 지출</string>
    <string name="expense_type_variable">변동 지출</string>
    <string name="expense_type_saving">저축/투자</string>
    <string name="expense_name">지출 이름</string>
    <string name="expense_name_hint">지출 이름 입력</string>
    <string name="expense_amount">금액</string>
    <string name="expense_amount_hint">지출 금액 입력</string>
    <string name="expense_category">카테고리</string>
    <string name="category_leisure">여가</string>
    <string name="category_housing">주거</string>
    <string name="category_food">식비</string>
    <string name="category_transport">교통</string>
    <string name="category_medical">의료</string>
    <string name="category_shopping">쇼핑</string>
    <string name="category_other">기타</string>
    <string name="category_saving">저축</string>
    <string name="category_investment">투자</string>
    <string name="payment_method">결제 수단</string>
    <string name="payment_method_hint">예: 현대카드, 현금</string>
    <string name="expense_destination">지출처</string>
    <string name="expense_destination_hint">예: 하나은행 저축, 청년저축</string>
    <string name="payment_date">결제일</string>
    <string name="payment_date_hint">mm/dd/yyyy</string>
    <string name="share_expense">공유 여부</string>
    <string name="share_people">공유 인원</string>
    <string name="share_cost">총 %1$s원 · 내 부담 %2$s원(%3$d명 공유)</string>
    <string name="decrease_share_people">공유 인원 줄이기</string>
    <string name="increase_share_people">공유 인원 늘리기</string>
    <string name="recurring_payment_setting">정기 결제 설정</string>
    <string name="recurring_day">결제일</string>
    <string name="recurring_cycle">반복 주기</string>
    <string name="save">저장하기</string>
    <string name="edit">수정하기</string>
    <string name="close">닫기</string>
    <string name="delete_expense">지출 삭제</string>
    <string name="delete_expense_title">지출을 삭제할까요?</string>
    <string name="delete_expense_message">삭제한 지출은 복구할 수 없습니다.</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="expense_saved">지출이 저장되었습니다.</string>
    <string name="expense_updated">지출이 수정되었습니다.</string>
    <string name="expense_deleted">지출이 삭제되었습니다.</string>
    <string name="expense_required">지출 이름과 금액을 입력해 주세요.</string>
    <string name="expense_all_required">지출 이름, 금액, 카테고리, 결제 수단과 결제일을 모두 입력해 주세요.</string>
    <string name="expense_amount_invalid">금액은 0원보다 커야 합니다.</string>
    <string name="monthly_conversion">월 환산 약 %1$s원</string>
    <string name="day_value">%1$d일</string>
    <string name="fixed_expense_list_title">정기 지출</string>
    <string name="fixed_expense_empty">등록된 정기 지출이 없습니다.\n아래 버튼으로 지출을 추가해 보세요.</string>
    <string name="add_fixed_expense">고정 지출 추가</string>
    <string name="expense_list_detail">%1$s · %2$s · %3$s</string>
    <string name="expense_list_amount">-%1$s원</string>
    <string name="payment_notification_channel">결제 예정 알림</string>
    <string name="payment_notification_title">내일 결제 예정</string>
    <string name="payment_notification_message">%1$s 결제 하루 전이에요 · %2$s원 예정</string>
    <string name="expense_category_selected">%1$s 카테고리가 선택되었습니다.</string>
    <string-array name="recurring_days">
        <item>1일</item>
        <item>2일</item>
        <item>3일</item>
        <item>4일</item>
        <item>5일</item>
        <item>6일</item>
        <item>7일</item>
        <item>8일</item>
        <item>9일</item>
        <item>10일</item>
        <item>11일</item>
        <item>12일</item>
        <item>13일</item>
        <item>14일</item>
        <item>15일</item>
        <item>16일</item>
        <item>17일</item>
        <item>18일</item>
        <item>19일</item>
        <item>20일</item>
        <item>21일</item>
        <item>22일</item>
        <item>23일</item>
        <item>24일</item>
        <item>25일</item>
        <item>26일</item>
        <item>27일</item>
        <item>28일</item>
        <item>29일</item>
        <item>30일</item>
        <item>31일</item>
    </string-array>
    <string-array name="recurring_cycles">
        <item>월간</item>
        <item>연간</item>
    </string-array>
</resources>
